Added compareCommand and compareCommandScope to expression comparing